Add support for Arduino (K210) platform